Fix scrollbar showing up in STAKS

--- a/src/staks/src/game.css
+++ b/src/staks/src/game.css
@@ -8,6 +8,7 @@
     height: 100%;
     touch-action: none;
     user-select: none;
+    overflow: hidden;
 }
 
 .stk_canvas {
